# Project-EverGreen

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  gitignore  pyproject.toml  requirements.txt
evergreen/: Dockerfile  asgi.py  db.sqlite3  functions.js  index.html  manage.py  pyproject.toml  requirements.txt  settings.py  styles.css  urls.py  wsgi.py
evergreen/eg_app/: apps.py  models.py  urls.py  views.py
evergreen/eg_app/templates/: index.html
evergreen/eg_app/tests/util/: test_validators.py
evergreen/eg_app/util/: authenticate.py  encrypt.py  validators.py
evergreen/evergreen/: asgi.py  settings.py  urls.py  wsgi.py
evergreen/staticfiles/css/: styles.css
evergreen/staticfiles/js/: functions.js
