[tool.poetry]
name = "project-evergreen"
version = "0.1.0"
description = "Project for CSE312 in Fall 2024."
authors = ["Eric-Butcher <ebutcher66@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.2.0"
pymongo = "^4.9.1"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
