[tool.poetry]
name = "project-evergreen"
version = "0.1.0"
description = "Project for CSE312 in Fall 2024."
authors = [
    "Eric Butcher <ericbutc@buffalo.edu>", 
    "Alex McHugh <apmchugh@buffalo.edu>", 
    "Sumanyu Janaparedy <sumanyuj@buffalo.edu>", 
    "Rances Colon <rancesco@buffalo.edu>", 
    "Gianna Germain <ggermain@buffalo.edu>"
]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.2.0"
Django = "^5.1.1"
whitenoise = "^6.7.0"
email-validator = "^2.2.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
